# llm-recipe

./: README.md  main.py  pyproject.toml
src/: app.py  templates.py
