[tool.poetry]
name = "recipe-llm"
version = "0.1.0"
description = ""
authors = ["diegulio <diego.machado@usach.cl>"]
readme = "README.md"
packages = [{include = "recipe_llm"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.209"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
gradio = "^3.35.2"
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
